# DRSSH

./: 20260609_084041_192_168_1_136.db  CMakeLists.txt  README.md  RemoteJournal  RemoteJournal.h  RemoteJournalok  autostart.json  filters.json  main.cpp
.github/workflows/: build.yml  windows.yml
backendServer/: CMakeLists.txt
backendServer/src/: main.cpp  main.old
backendServer/www/: index.html
include/: AutoStart.h  ConnectionProfile.h  ConnectionTab.h  CustomTabManager.h  Database.h  Events.h  FilterConfig.h  LogEntry.h  LogTableCtrl.h  MainFrame.h  RemoteJournal.h  SSHJournalReader.h  SerialReader.h
src/: AutoStart.cpp  ConnectionProfile.cpp  CustomTabManager.cpp  Database.cpp  Events.cpp  FilterConfig.cpp  FilterConfigDialog.cpp  LogEntry.cpp  LogTableCtrl.cpp  MainFrame.cpp  ProfileDialog.cpp  SSHJournalReader.cpp
